# IsoMutator

./: .gitignore  pyproject.toml
configs/: logging.json
src/isocore/: main.py
src/isocore/core/: log_manager.py  queue_manager.py
src/isocore/ingestors/: base.py  reddit.py
src/isocore/processors/: inference.py
src/isomutator/: main.py
src/isomutator/core/: cache.py  config.py  exceptions.py  log_manager.py  queue_manager.py  strategies.py  task_watcher.py  telemetry_service.py
src/isomutator/ingestors/: base.py  context_mutator.py  llm_client.py  mutator.py
src/isomutator/processors/: judge.py  semantic_judge.py  striker.py
src/isomutator/reporting/: report_generator.py  strategies.py
src/isomutator/ui/: app.py
tests/: conftest.py  test_logging.py  test_queue_manager.py  test_reddit_ingestor.py
tests/e2e/: conftest.py  test_pipeline_e2e.py
tests/integration/: conftest.py  test_cache_pipeline.py  test_pipeline.py  test_staging_pipeline.py  test_striker_pipeline.py  test_telemetry_pipeline.py
tests/isomutator/core/: test_attacker_llm_client.py  test_cache.py  test_config.py  test_gradient_strategy.py  test_linux_privesc_strategy.py  test_llm_client.py  test_log_manager.py  test_logging.py  test_owasp_xss_strategy.py  test_persona_strategy.py  test_queue_manager.py  test_task_watcher.py  test_telemetry_service.py
tests/isomutator/ingestors/: test_context_mutator.py  test_mutator.py  test_mutator_integration.py
tests/isomutator/model/: test_packet.py
tests/isomutator/processors/: test_async_striker.py  test_judge.py  test_semantic_judge.py  test_striker_kill_switch.py
tests/isomutator/reporting/: test_report_generator.py
tests/isomutator/ui/: test_app_kill_switch.py  test_app_layout.py  test_app_reconnect.py  test_app_start.py  test_app_stop.py  test_dashboard_state.py  test_strategy_selection.py  test_ui_app.py
